Demo Selika/force-app/main/default/objects/Equipos_Especializados__c/Equipos_Especializados__c.object-meta.xml
<CustomObject>
    <fullName>Equipos_Especializados__c</fullName>
    <description>Gestión de equipos médicos únicos de Selika Medical para maximizar ROI tecnológico</description>
    <label>Equipos Especializados</label>
    <nameField>
        <label>Nombre del Equipo</label>
        <length>80</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipos Especializados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>