Demo Selika/force-app/main/default/objects/Equipos_Especializados__c/fields/Especialidad_Asociada__c.field-meta.xml
<CustomField>
    <fullName>Especialidad_Asociada__c</fullName>
    <label>Especialidad Asociada</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gastroenterología</fullName>
            </value>
            <value>
                <fullName>Coloproctología</fullName>
            </value>
            <value>
                <fullName>Fisiología Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Cirugía General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>