Demo Selika/force-app/main/default/objects/Equipos_Especializados__c/fields/Estado_Operativo__c.field-meta.xml
<CustomField>
    <fullName>Estado_Operativo__c</fullName>
    <label>Estado Operativo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operativo</fullName>
                <default>true</default>
                <label>Operativo</label>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Fuera de Servicio</fullName>
            </value>
            <value>
                <fullName>Calibración</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>