Demo Selika/force-app/main/default/objects/Equipos_Especializados__c/fields/Proximo_Mantenimiento__c.field-meta.xml
<CustomField>
    <fullName>Proximo_Mantenimiento__c</fullName>
    <label>Próximo Mantenimiento</label>
    <type>Date</type>
</CustomField>