Demo Selika/force-app/main/default/objects/Equipos_Especializados__c/fields/Tipo_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Equipo__c</fullName>
    <label>Tipo de Equipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Torre Olympus X1</fullName>
            </value>
            <value>
                <fullName>IA Colonoscopia</fullName>
            </value>
            <value>
                <fullName>Manometría 3D</fullName>
            </value>
            <value>
                <fullName>pH-metría 24h</fullName>
            </value>
            <value>
                <fullName>Sistema Energía Bipolar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>