Demo Selika/force-app/main/default/objects/Equipos_Especializados__c/fields/Utilizacion_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Utilizacion_Mensual__c</fullName>
    <label>Utilización Mensual (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>