Demo Selika/force-app/main/default/objects/Equipos_Especializados__c/fields/Valor_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Valor_Equipo__c</fullName>
    <label>Valor del Equipo (COP)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>